<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstAndroidApp</string>
    <string name="hello_world">登录首页</string>
    <string name="action_settings">Settings</string>
    <string name="text1">账号：</string>
    <string name="text2">密码：</string>
    <string name="text3">请填写登录账号</string>
    <string name="text4">请填写登录密码</string>
    <string name="text5">登录</string>
    <string name="text6">重置</string>
    <string name="title_activity_loginsuccess">loginSuccess</string>
    <string name="text7">登录成功</string>

</resources>
